<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:weightSum="100">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:contentDescription="@string/app_name"
        android:src="@drawable/connect2letras"
        android:layout_gravity="center_horizontal"
        android:id="@+id/iv_logo"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/et_phone_number"
        android:inputType="phone"
        android:hint="@string/ask_phone_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_weight="15"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:layout_weight="15"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_terms_ask"
        android:id="@+id/checkBox"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:checked="false"
        android:layout_weight="10"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:id="@+id/bt_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:onClick="loginButtonClick"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_terms_link"
        android:id="@+id/textView"
        android:layout_weight="5"
        android:onClick="useTermsViewDetails"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="15dp" />


</LinearLayout>